Posted practical.twisted

--- a/templates/base.html
+++ b/templates/base.html
@@ -133,6 +133,11 @@ margin: 0 0 1em 0;
 font: normal normal 16px Crimson Text;
 color: #000000;
 }
+h3 {
+margin: 0 0 1em 0;
+font: normal normal 14px Crimson Text;
+color: #000000;
+}
 /* Widgets
 ----------------------------------------------- */
 .widget .zippy {
@@ -358,6 +363,11 @@ padding-left: 16px;
 font-family: 'Open Sans', 'Crimson Text', sans-serif;
 }
 h2 {
+font-family: 'Open Sans', 'Crimson Text', sans-serif;
+margin-top: 2em;
+margin-bottom: 0.2em;
+}
+h3 {
 font-family: 'Open Sans', 'Crimson Text', sans-serif;
 margin-top: 2em;
 margin-bottom: 0.2em;
@@ -672,6 +682,8 @@ margin-bottom: 12em;
 .code.diff .gh{color:#fd7;font-weight:bold;}
 .code.diff .gi{color:#2b2;}
 .code.diff .gu{color:#8AC6F2;font-weight:bold;}
+
+.code.text { background: #444;}
 --></style>
 <style id='template-skin-1' type='text/css'><!--
 body {
